--- a/feedback.html
+++ b/feedback.html
@@ -193,7 +193,7 @@
                             </select>
                         </div>  
                         <div class="form-group">
-                            <label for="sub-category1">Feedback Category</label>
+                            <label for="sub-category1">Feedback Sub-category</label>
                             <select class="form-control sub-category1" id="sub-category1" name="subcategory1">
                             <option class = 'Select-sub'>Select Sub-category</option>
                             <option class = 'Operations'>Admission - Room allotment delay</option>
@@ -306,7 +306,7 @@
                             </select>
                         </div>  
                         <div class="form-group">
-                            <label for="sub-category2">Feedback Category</label>
+                            <label for="sub-category2">Feedback Sub-category</label>
                             <select class="form-control sub-category2" id="sub-category2" name="subcategory2">
                             <option class = 'Select-sub'>Select Sub-category</option>
                             <option class = 'Operations'>Admission - Room allotment delay</option>
@@ -419,7 +419,7 @@
                             </select>
                         </div>  
                         <div class="form-group">
-                            <label for="sub-category3">Feedback Category</label>
+                            <label for="sub-category3">Feedback Sub-category</label>
                             <select class="form-control sub-category3" id="sub-category3" name="subcategory3">
                             <option class = 'Select-sub'>Select Sub-category</option>
                             <option class = 'Operations'>Admission - Room allotment delay</option>
