--- a/feedback.html
+++ b/feedback.html
@@ -578,6 +578,8 @@
             document.getElementById('mobile').value = mobile;
             document.getElementById('admNo').value = admNo;
 
+            Console.log(admNo);
+
         //Update sub-category based on category selected
         //Based on http://jsfiddle.net/Wa4ZF/9/ and https://stackoverflow.com/questions/20477406/filter-category-select-drop-down-based-on-another-drop-down-option
         //Feedback 1
