--- a/feedback.html
+++ b/feedback.html
@@ -543,7 +543,8 @@
                 let message = "";
                 if (data.status === 200) {
                     heading = "Feedback submitted successfully!";
-                    message = "Thank you for submitting your feedback.";
+                    message = "Your feedback is extremely important to us. Sharing your experience, whether good or bad, will help us\
+                    in our quest for providing a delightful experience for all our patients.";
                     form.reset();
                 }
                 else {
