--- a/close.html
+++ b/close.html
@@ -120,12 +120,12 @@
     }
 
     .bmh-blue-bg{
-        background-color: #005AAB !important;
+        background-color: #364cc9 !important;
         color: #ffffff !important;
     }
 
     .bmh-blue-txt{
-        color: #005AAB !important;
+        color: #2c3da3 !important;
     }
 
     .bmh-orange-bg{
