--- a/feedback.html
+++ b/feedback.html
@@ -81,9 +81,15 @@
 
         } */
 
-        /* .bmh-colour {
-        background-color: #005bab !important;
-        } */
+        .bmh-blue-bg{
+        background-color: #364cc9 !important;
+        color: #ffffff !important;
+    }
+
+    .bmh-orange-bg{
+        background-color: #F35724 !important;
+        color: #ffffff !important;
+    }
 
         hr.hr-style { 
         border: 0; 
@@ -99,7 +105,7 @@
  
 <body>    
     <div class = 'container'>
-            <div class="jumbotron jumbotron-fluid bg-primary bmh-colour">
+            <div class="jumbotron jumbotron-fluid bmh-blue-bg">
                     <div class="container text-center">
                       <h1 class="display-5 text-white">BMH IP Feedback Form</h1>
                       <p class="text-white"><em>Powered by BMH Data Analytics Team</em></p>
@@ -155,7 +161,7 @@
                         
                     </div> 
                     <div class="form-group">
-                        <button class="btn btn-secondary hide-me btn-block" type="button" data-toggle="collapse" data-target="#feedback1" aria-expanded="false" aria-controls="collapseExample">
+                        <button class="btn bmh-orange-bg hide-me btn-block" type="button" data-toggle="collapse" data-target="#feedback1" aria-expanded="false" aria-controls="collapseExample">
                                 Add Feedback
                         </button>
                     </div>
@@ -266,7 +272,7 @@
                             <textarea rows = "5" type="text" class="form-control" id="comments" name="description1"></textarea>                      
                         </div>   
                         <div class="form-group">
-                            <button class="btn btn-secondary hide-me btn-block" type="button" data-toggle="collapse" data-target="#feedback2" aria-expanded="false" aria-controls="collapseExample">
+                            <button class="btn bmh-orange-bg hide-me btn-block" type="button" data-toggle="collapse" data-target="#feedback2" aria-expanded="false" aria-controls="collapseExample">
                                 Add Feedback
                             </button>
                         </div>
@@ -379,7 +385,7 @@
                             <textarea rows = "5" type="text" class="form-control" id="comments" name="description2"></textarea>                      
                         </div>  
                         <div class="form-group">
-                            <button class="btn btn-secondary hide-me btn-block" type="button" data-toggle="collapse" data-target="#feedback3" aria-expanded="false" aria-controls="collapseExample">
+                            <button class="btn bmh-orange-bg hide-me btn-block" type="button" data-toggle="collapse" data-target="#feedback3" aria-expanded="false" aria-controls="collapseExample">
                                 Add Feedback
                             </button> 
                         </div>
@@ -492,7 +498,7 @@
                             <textarea rows = "5" type="text" class="form-control" id="comments" name="description3"></textarea>
                         </div>   
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                    <button type="submit" class="btn bmh-blue-bg btn-block">Submit</button>
             </form>
 
         <!-- Submission confirmation modal -->
