--- a/feedback.html
+++ b/feedback.html
@@ -107,7 +107,8 @@
     <div class = 'container'>
             <div class="jumbotron jumbotron-fluid bmh-blue-bg">
                     <div class="container text-center">
-                      <h1 class="display-5 text-white">BMH IP Feedback Form</h1>
+                      <img src="logo.jpg" class="img-fluid rounded" alt="Responsive image">
+                      <h1 class="display-5 text-white pt-3">IP Feedback Form</h1>
                       <p class="text-white"><em>Powered by BMH Data Analytics Team</em></p>
                     </div>
                   </div>
