--- a/feedback.html
+++ b/feedback.html
@@ -106,7 +106,7 @@
 <body>    
         <div class="jumbotron jumbotron-fluid bmh-blue-bg">
                 <div class="container text-center">
-                  <img src="logo.jpg" class="img-fluid rounded" alt="Responsive image">
+                  <img src="logo2.png" class="img-fluid rounded" alt="Responsive image">
                   <h1 class="display-5 text-white pt-3">IP Feedback Form</h1>
                   <p class="text-white"><em>Powered by BMH Data Analytics Team</em></p>
                 </div>
