--- a/close.html
+++ b/close.html
@@ -147,7 +147,7 @@
         <div class="jumbotron jumbotron-fluid bmh-blue-bg">
                     <div class="container text-center">
                         <img src="logo 200.png" class="img-fluid rounded" alt="Responsive image">
-                        <h1 class="display-5 text-white pt-3">IP Feedback Analysis</h1>
+                        <h1 class="display-5 text-white pt-3">Feedback Analysis</h1>
                       <p class="text-white"><em>Powered by BMH Data Analytics Team</em></p>
                     </div>
         </div>
