--- a/close.html
+++ b/close.html
@@ -364,9 +364,9 @@
                     <div id = 'modal-text' class="modal-body">
                     ...
                     </div>
-                    <div class="modal-footer">
+                    <div class="modal-footer justify-content-center">
                         <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-block bmh-blue-bg" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
